<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SignUpActivity"
    android:gravity="center"
    android:padding="@dimen/sign_up_root_padding"
    android:background="@drawable/splash_screen_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:orientation="vertical"
        android:padding="@dimen/sign_up_sub_padding"
        >


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:buttonTint="@color/edittext_text_color"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:buttonTint="@color/edittext_text_color"
                    android:text="@string/company"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/fair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery"
                    android:buttonTint="@color/edittext_text_color"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint"
            style="@style/EditText1Style"
            android:id="@+id/sign_up_name"
            android:textAlignment="center"
            android:padding="10dp"
            android:lines="1"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:layout_marginBottom="@dimen/user_profile_margin"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            >

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:id="@+id/sign_up_number"
                android:textAlignment="center"
                style="@style/EditText1Style"
                android:hint="@string/phone_number"
                android:textSize="15sp"
                android:padding="10dp"
                android:lines="1"
                android:inputType="phone"
                android:layout_marginEnd="10dp"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/EditText1Style"
                android:hint="@string/_966"
                android:id="@+id/country_code"
                android:textSize="15sp"
                android:enabled="false"
                android:lines="1"
                android:textAlignment="center"
                android:padding="10dp"
                android:layout_weight="3"
                />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText1Style"
            android:hint="@string/email_hint"
            android:id="@+id/sign_up_email"
            android:textAlignment="center"
            android:padding="10dp"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/user_profile_margin"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText1Style"
            android:hint="@string/password_hint"
            android:id="@+id/sign_up_password"
            android:textAlignment="center"
            android:lines="1"
            android:padding="10dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:layout_marginBottom="@dimen/user_profile_margin"
            android:layout_marginTop="@dimen/user_profile_margin"
            />



        <LinearLayout
            style="@style/EditText1Style"
            android:layout_marginBottom="@dimen/user_profile_margin"
            android:padding="3dp">
            <Spinner
                android:id="@+id/city_spinner"
                style="@style/EditText1Style"
                android:background="@drawable/ic_dropdown" />
        </LinearLayout>

        <LinearLayout
            style="@style/EditText1Style"
            android:layout_marginBottom="@dimen/user_profile_margin"
            android:padding="3dp">
            <Spinner
                android:id="@+id/gender_spinner"
                style="@style/EditText1Style"
                android:background="@drawable/ic_dropdown" />
        </LinearLayout>


        <LinearLayout
            style="@style/EditText1Style"
            android:onClick="selectLocation"
            android:id="@+id/location_user"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="تحديد موقعك"
                android:textColor="@color/edittext_text_color"
                android:textColorHint="@color/edittext_hint_color"
                android:id="@+id/select_location"
                android:textSize="15sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/user_profile_margin"
            >

            <ImageView
                android:id="@+id/agree_shroot_imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_agreement_uncheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:id="@+id/agree_shroot"
                android:textSize="15sp"
                android:text="@string/agree_shroot_html"
                android:textColor="@color/textview_text_color"
                />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/sign_in_button"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="@dimen/user_profile_margin"
            android:onClick="next"
            android:id="@+id/nextButton"
            android:layout_marginBottom="20dp"
            android:text="@string/next"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="18sp"
            />



    </LinearLayout>
</LinearLayout>