<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/splash_screen_bg"
    android:gravity="center"
    android:padding="@dimen/retrieve_pass_padding_root"
    tools:context=".ui.activity.RetrievePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/sign_up_sub_padding"
        android:background="@drawable/edit_text_border"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:weightSum="10"
            >

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:id="@+id/phone_number"
                android:textAlignment="center"
                style="@style/EditText1StyleRed"
                android:hint="@string/phone_number"
                android:lines="1"
                android:maxLength="10"
                android:inputType="phone"
                android:textSize="15sp"
                android:padding="10dp"
                android:layout_marginEnd="10dp"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/EditText1StyleRed"
                android:hint="@string/_966"
                android:id="@+id/country_code"
                android:enabled="false"
                android:lines="1"
                android:maxLength="5"
                android:textSize="15sp"
                android:textAlignment="center"
                android:padding="10dp"
                android:layout_weight="3"
                />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_button_height"
            android:background="@drawable/sign_in_button"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_ret_password"
            android:layout_marginBottom="10dp"
            android:text="@string/rest_password"
            android:textColor="#fff"
            android:onClick="CheckCode"
            android:textSize="18sp"
            />

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:id="@+id/message"
            android:text="@string/will_send_u_code_by_mail"
            android:textColor="@color/textview_text_color" />

    </LinearLayout>
</LinearLayout>