<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/splash_screen_bg"
    android:gravity="center"
    android:padding="@dimen/fragment_main_padding_root"
    tools:context=".ui.activity.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/sign_up_sub_padding"
        android:background="@drawable/edit_text_border"
        >


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText1StyleRed"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:id="@+id/new_password"
            android:hint="@string/new_password_hint"
            android:textAlignment="center"
            android:padding="10dp"
            android:lines="1"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText1StyleRed"
            android:textSize="15sp"
            android:lines="1"
            android:inputType="textPassword"
            android:id="@+id/confirm_new_password"
            android:hint="@string/retype_new_password_hint"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_button_height"
            android:background="@drawable/sign_in_button"
            android:layout_marginTop="10dp"
            android:id="@+id/reset_password"
            android:layout_marginBottom="20dp"
            android:text="@string/rest_password"
            android:textColor="#fff"
            android:onClick="goToHomeActivity"
            android:textStyle="bold"
            android:textSize="18sp"
             />

    </LinearLayout>
</LinearLayout>